# os_lab_2

./: CMakeLists.txt  README.md  run_with_monitoring.sh
doc/: Report_lab_2.docx  materials.md
include/: qpsort.h
src/: main.c  only_sort.c  qpsort.c
tests/: test_1000_elements.txt  test_100_elements.txt  test_10k_elements.txt
